[package]
name = "apksigner"
description = "apksigner - see apksig"
version = "0.1.3"
edition = "2021"
license = "MIT"
keywords = ["apk", "sign", "signature", "android"]
homepage = "https://github.com/Its-Just-Nans/apksigner"
repository = "https://github.com/Its-Just-Nans/crates"
documentation = "https://docs.rs/apksigner"

[dependencies]
