[package]
name = "yakb"
version = "0.1.1"
edition = "2024"
description = "yakb - Yet Another Knowledge Base"
license = "MIT"
keywords = ["knowledge", "base"]
homepage = "https://yakb.n4n5.dev"
repository = "https://github.com/Its-Just-Nans/crates"
documentation = "https://github.com/Its-Just-Nans/yakb"

[dependencies]
